<resources>
    <string name="app_name">WorldCinema</string>
    <string name="logo">Logo</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Регистрация</string>
    <string name="Password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="name">Имя</string>
    <string name="fam">Фамилия</string>
    <string name="register">Зарегистрироваться</string>
    <string name="est_acc">У меня уже есть аккаунт</string>
    <string name="inTrend">В тренде</string>
    <string name="inNew">Новое</string>
    <string name="forMe">Для Вас</string>
    <string name="main_navigation">Главная</string>
    <string name="watch">Смотреть</string>
    <string name="description">Описание</string>
    <string name="frames">Кадры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compilation">Подборка</string>
    <string name="collection">Избранные</string>
    <string name="profile">Профиль</string>
    <string name="you_watched">Вы смотрели</string>
    <string name="favorite">Избранные</string>
    <string name="sorry">К сожалению полнометражного фильма нет. Перейти в браузер для поиска?</string>
</resources>