<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:baselineAligned="false"
    android:clickable="false"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_main"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/frame"
        android:hint="@string/e_mail"
        android:paddingHorizontal="20dp"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#A8A8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/frame"
        android:hint="@string/Password"
        android:paddingHorizontal="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#A8A8A8"
        android:textColorLink="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/frame_sign_up"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/frame"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#EF3A01"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
