<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_main"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_main"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/frame"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:textColorHint="#A8A8A8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_main" />

        <EditText
            android:id="@+id/signUpFamily"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/frame"
            android:hint="@string/fam"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A8A8A8"
            app:layout_constraintTop_toBottomOf="@+id/signUpName" />
        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/frame"
            android:hint="@string/e_mail"
            android:inputType="textWebEmailAddress"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A8A8A8"
            app:layout_constraintTop_toBottomOf="@+id/signUpFamily" />
        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/frame"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A8A8A8"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />
        <EditText
            android:id="@+id/signUpPasswordRepiat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/frame"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A8A8A8"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/frame_sign_up"
            android:text="@string/register"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPasswordRepiat" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/frame"
            android:text="@string/est_acc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#EF3A01"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistration"
            tools:layout_editor_absoluteX="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
