<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_color">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="right"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="10" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:background="#1AC4C4C4"
                app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                app:tabIndicatorColor="@color/main_color_text"
                app:tabTextColor="@color/main_color_text">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inTrend" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inNew" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forMe" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

            <LinearLayout
                android:id="@+id/youWatchedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibality="visible">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="13dp"
                    android:text="@string/you_watched"
                    android:textColor="@color/main_color_text"
                    android:textStyle="bold"
                    android:textSize="25dp" />

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/playerView"
                    app:controller_layout_id="@layout/media_controller"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    app:show_buffering="always"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>