<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:scaleType="centerCrop"
            android:id="@+id/filmPreview"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatImageView
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/gradient_image_film"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/filmPreview"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/favorite_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/favorite"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/filmName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="60dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:gravity="center"
            tools:text="18+"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:textColor="@color/main_color_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:textSize="25dp"
            android:padding="13dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/filmPreview" />

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            app:controller_layout_id="@layout/media_controller"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:show_buffering="always"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="25dp"
            android:padding="13dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/playerView" />
        <TextView
            android:id="@+id/filmDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15dp"
            android:padding="13dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/frameContainer"
            app:layout_constraintTop_toBottomOf="@+id/filmDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frames"
                android:textSize="25dp"
                android:padding="13dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/filmVideo" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>